Dockerfile: Continues preparation for docker image creation