@@ -1,26 +1,13 @@
-FROM alpine:latest as packager
-
-RUN apk --no-cache add openjdk11-jdk openjdk11-jmods
-
-ENV JAVA_MINIMAL="/opt/java-minimal"
-
-# build minimal JRE
-RUN /usr/lib/jvm/java-11-openjdk/bin/jlink \
-    --verbose \
-    --add-modules \
-        java.base,java.sql,java.naming,java.desktop,java.management,java.security.jgss,java.instrument \
-    --compress 2 --strip-debug --no-header-files --no-man-pages \
-    --release-info="add:IMPLEMENTOR=radistao:IMPLEMENTOR_VERSION=radistao_JRE" \
-    --output "$JAVA_MINIMAL"
-
 FROM alpine:latest
 
-ENV JAVA_HOME=/opt/java-minimal
-ENV PATH="$PATH:$JAVA_HOME/bin"
+RUN apk --update add openjdk11
 
-COPY --from=packager "$JAVA_HOME" "$JAVA_HOME"
-#COPY build/libs/application.jar app.jar
+COPY ./build/libs/SprintStats-R1.0.1-all.jar /var/www/java/
+
+COPY ./*.json /var/www/java/
+
 COPY . /var/www/java
+
 WORKDIR /var/www/java
 
 ENTRYPOINT ["java", "-jar", "SprintStats-R1.0.1-all.jar", "-d"]
